set(sources
        d3d12_commands.cpp
        d3d12_command_list1_wrap.cpp
        d3d12_command_list2_wrap.cpp
        d3d12_command_list3_wrap.cpp
        d3d12_command_list4_wrap.cpp
        d3d12_command_list5_wrap.cpp
        d3d12_command_list6_wrap.cpp
        d3d12_command_list7_wrap.cpp
        d3d12_command_list8_wrap.cpp
        d3d12_command_list9_wrap.cpp
        d3d12_command_list_wrap.cpp
        d3d12_command_queue_wrap.cpp
        d3d12_common.cpp
        d3d12_counters.cpp
        d3d12_debug.cpp
        d3d12_device.cpp
        d3d12_device_rescreate_wrap.cpp
        d3d12_device_wrap.cpp
        d3d12_device_wrap1.cpp
        d3d12_device_wrap11.cpp
        d3d12_device_wrap12.cpp
        d3d12_device_wrap2.cpp
        d3d12_device_wrap3.cpp
        d3d12_device_wrap4.cpp
        d3d12_device_wrap5.cpp
        d3d12_device_wrap6.cpp
        d3d12_device_wrap7.cpp
        d3d12_device_wrap8.cpp
        d3d12_device_wrap9.cpp
        d3d12_hooks.cpp
        d3d12_initstate.cpp
        d3d12_manager.cpp
        d3d12_msaa_array_conv.cpp
        d3d12_outputwindow.cpp
        d3d12_overlay.cpp
        d3d12_pixelhistory.cpp
        d3d12_postvs.cpp
        d3d12_rendermesh.cpp
        d3d12_rendertext.cpp
        d3d12_rendertexture.cpp
        d3d12_replay.cpp
        d3d12_resources.cpp
        d3d12_sdk_select.cpp
        d3d12_serialise.cpp
        d3d12_shaderdebug.cpp
        d3d12_shader_cache.cpp
        d3d12_shader_feedback.cpp
        d3d12_state.cpp
        d3d12_stringise.cpp
        ../dx/official/D3D11On12On7.h
        ../dx/official/D3D12Downlevel.h
        d3d12_commands.h
        d3d12_command_list.h
        d3d12_command_queue.h
        d3d12_common.h
        d3d12_debug.h
        d3d12_device.h
        d3d12_hooks.h
        d3d12_manager.h
        ../dx/official/d3d12.h
        ../dx/official/d3d12sdklayers.h
        d3d12_rendertext.h
        d3d12_replay.h
        d3d12_resources.h
        d3d12_shader_cache.h
        d3d12_state.h
)

set(definitions ${RDOC_DEFINITIONS})

add_library(rdoc_d3d12 OBJECT ${sources})
target_compile_definitions(rdoc_d3d12 ${definitions})
target_include_directories(rdoc_d3d12 ${RDOC_INCLUDES})
